mdapi/Custom/objects/FAQs__c.object
<CustomObject>
    <description>This is used as a training mechanism to track frequently asked questions and related documentation.</description>
    <fields>
        <fullName>Add_Pictures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For SF Admin use only prior to migrating to Prod.  Get pictures from existing Answers tab and populate the corresponding entry on the Answers object.  Delete this field when complete.</description>
        <label>Add Pictures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Answered__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Answered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Asked__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>This field is populated via a Workflow Field Update when a new Question is posted.</inlineHelpText>
        <label>Date Asked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reference_Material__c</fullName>
        <label>Reference Material</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_URL__c</fullName>
        <label>Reference URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subtopic__c</fullName>
        <label>Subtopic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Topic__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AppTrack</fullName>
                </value>
                <value>
                    <fullName>Atlanta Auction</fullName>
                </value>
                <value>
                    <fullName>AZBidder</fullName>
                </value>
                <value>
                    <fullName>Bulk Deal</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Eviction</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Lease &amp; Renewal</fullName>
                </value>
                <value>
                    <fullName>Nitro/iPad/HD App/HD Budget Walk</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
                <value>
                    <fullName>Property Issue</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>PTL</fullName>
                </value>
                <value>
                    <fullName>QC Audit</fullName>
                </value>
                <value>
                    <fullName>Rehab Projected Spend</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Residence</fullName>
                </value>
                <value>
                    <fullName>Salesforce1</fullName>
                </value>
                <value>
                    <fullName>Scripts</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <inlineHelpText>Choose the Topic that best represents your question.  If your question applies to multiple tabs or functional areas of the company, select General.</inlineHelpText>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisitions</fullName>
                </value>
                <value>
                    <fullName>BrokerSite</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Companies/Contacts</fullName>
                </value>
                <value>
                    <fullName>Concierge</fullName>
                </value>
                <value>
                    <fullName>EM/COE Tracker &amp; Wire Requests</fullName>
                </value>
                <value>
                    <fullName>File Storage (S3)</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>HOA</fullName>
                </value>
                <value>
                    <fullName>IH Lead</fullName>
                </value>
                <value>
                    <fullName>Intranet</fullName>
                </value>
                <value>
                    <fullName>Lease &amp; Renewal</fullName>
                </value>
                <value>
                    <fullName>Lease &amp; Renewal &amp; Rehab</fullName>
                </value>
                <value>
                    <fullName>Listing</fullName>
                </value>
                <value>
                    <fullName>Property Issues</fullName>
                </value>
                <value>
                    <fullName>Rehab</fullName>
                </value>
                <value>
                    <fullName>Rehab &amp; Listing</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>SQL Files</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
                <value>
                    <fullName>Violations</fullName>
                </value>
                <value>
                    <fullName>Yardi Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FAQs</label>
    <listViews>
        <fullName>BrokerSite</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Reference_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>BrokerSite</value>
        </filters>
        <label>BrokerSite</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chatter</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Reference_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>Chatter</value>
        </filters>
        <label>Chatter</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Companies_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Reference_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>Companies/Contacts</value>
        </filters>
        <label>Companies &amp; Contacts</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Favorites</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Topic__c</columns>
        <columns>Subtopic__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Favorite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Favorites</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Subtopic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>General</value>
        </filters>
        <filters>
            <field>Favorite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>General</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IH_Leads</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Subtopic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>IH Lead</value>
        </filters>
        <label>IH Leads</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Subtopic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>Listing,Rehab &amp; Listing,Lease &amp; Renewal,Lease &amp; Renewal &amp; Rehab</value>
        </filters>
        <label>Leasing</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nitro</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subtopic__c</field>
            <operation>equals</operation>
            <value>Nitro/iPad/HD App/HD Budget Walk</value>
        </filters>
        <label>Nitro</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rehab</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Subtopic__c</columns>
        <columns>Reference_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>,Rehab,Rehab &amp; Listing</value>
        </filters>
        <label>Rehab</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Reports_Dashboards</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Reference_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>Reports &amp; Dashboards</value>
        </filters>
        <label>Reports &amp; Dashboards</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>S3_SFN</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>File Storage (S3)</value>
        </filters>
        <label>S3-SFN</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Scripts</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Subtopic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subtopic__c</field>
            <operation>equals</operation>
            <value>Scripts</value>
        </filters>
        <label>Scripts</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TIP</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Topic__c</columns>
        <columns>Subtopic__c</columns>
        <columns>Reference_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>TIP</value>
        </filters>
        <label>TIP</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FAQ-{00000}</displayFormat>
        <label>FAQ ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <recordTypes>
        <fullName>Admin</fullName>
        <active>true</active>
        <description>For Salesforce Administrators&apos; use</description>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>For FAQs contributed by users</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>